WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121156
[Win] Compile error when VIDEO is not enabled.
https://bugs.webkit.org/show_bug.cgi?id=121156
Summary
[Win] Compile error when VIDEO is not enabled.
peavo
Reported
2013-09-11 05:52:41 PDT
I get the following error when compiling WinCairo:
>..\..\win\WebView.cpp(6260): error C3861: 'isHTMLVideoElement': identifier not found
Attachments
Patch
(1.21 KB, patch)
2013-09-11 05:59 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-09-11 05:59:10 PDT
Created
attachment 211301
[details]
Patch
WebKit Commit Bot
Comment 2
2013-09-11 07:25:43 PDT
Comment on
attachment 211301
[details]
Patch Clearing flags on attachment: 211301 Committed
r155525
: <
http://trac.webkit.org/changeset/155525
>
WebKit Commit Bot
Comment 3
2013-09-11 07:25:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug