[Win] Compile error when VIDEO is not enabled. https://bugs.webkit.org/show_bug.cgi?id=121156

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-09-11
Reviewed by Andreas Kling.

* WebView.cpp:
(WebView::enterFullscreenForNode): Protect isHTMLVideoElement() function with ENABLE(VIDEO) guard.

Canonical link: https://commits.webkit.org/139084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155525 268f45cc-cd09-0410-ab3c-d52691b4dbfc